[gd_scene load_steps=6 format=3 uid="uid://b5odyswh5ajdj"]

[ext_resource type="Script" uid="uid://bxydcfdi8hkgt" path="res://Characters/character.gd" id="1_x4c3g"]
[ext_resource type="PackedScene" uid="uid://b4pjp03xcqpk4" path="res://Characters/Bar/Bar.tscn" id="2_rvcrv"]
[ext_resource type="PackedScene" uid="uid://3ae3etkokqi1" path="res://Characters/Bardass/bardass.tscn" id="3_cet2a"]
[ext_resource type="PackedScene" uid="uid://c45ekjpoeqg2y" path="res://Characters/Zytex/zytex.tscn" id="4_j8nnj"]
[ext_resource type="PackedScene" uid="uid://c3gjc46y4xgkv" path="res://Characters/Stunlor/stunlor.tscn" id="5_mso7d"]

[node name="Character" type="Node2D"]
script = ExtResource("1_x4c3g")

[node name="HPBar" parent="." instance=ExtResource("2_rvcrv")]
visible = false
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -33.0
offset_right = 60.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="ManaBar" parent="." instance=ExtResource("2_rvcrv")]
visible = false
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 60.0
offset_right = 60.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
type = 1

[node name="StaminaBar" parent="." instance=ExtResource("2_rvcrv")]
visible = false
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 33.0
offset_right = 60.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
type = 2

[node name="Bardass" parent="." instance=ExtResource("3_cet2a")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Zytex" parent="." instance=ExtResource("4_j8nnj")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Stunlor" parent="." instance=ExtResource("5_mso7d")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pseudo" type="Label" parent="."]
offset_left = -49.0
offset_top = 35.0
offset_right = 50.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "Player Name"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="Bardass" to="." method="_on_bardass_mouse_entered"]
[connection signal="mouse_exited" from="Bardass" to="." method="_on_bardass_mouse_exited"]
[connection signal="mouse_entered" from="Zytex" to="." method="_on_zytex_mouse_entered"]
[connection signal="mouse_exited" from="Zytex" to="." method="_on_zytex_mouse_exited"]
[connection signal="mouse_entered" from="Stunlor" to="." method="_on_stunlor_mouse_entered"]
[connection signal="mouse_exited" from="Stunlor" to="." method="_on_stunlor_mouse_exited"]
